New folder/sgvpc.tf
resource "aws_security_group" "sg1" {
 
 
  vpc_id      = aws_vpc.vpc1.id

  ingress {
    
    from_port        = 22
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
	
   
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    
  }

  tags = {
    Name = "sg1"
  }
}
